--- a/AFC-sous-R.Rmd
+++ b/AFC-sous-R.Rmd
@@ -19,42 +19,20 @@ knitr::opts_chunk$set(echo = TRUE)
 
 Ce premier travail s'inscrit dans une démarche de réflexion, plus large, que nous souhaitons entreprendre autour **l'analyse de données multidimensionnelles**. La spécificité de ce premier travail réside dans le fait que nous allons nous concentrer sur **l'analyse factorielle des correspondances (AFC)**. Notre objectif sera d'étudier les **éventuelles** liaisons entre les modalités de deux variables qualitatives. Par ailleurs, nous avons fait le choix d'utiliser le logiciel [R](https://www.r-project.org/ "Logiciel R") ainsi que l'environnement de développement [RStudio](https://www.rstudio.com/ "Environnement de développement RStudio").
 
-Un certain nombre des données sur lesquelles nous allons travailler proviennent du MOOC [Analyse des données multidimensionnelles](https://www.fun-mooc.fr/courses/agrocampusouest/40001S03/session03/about "MOOC Analyse de données multidimensionnelles") sur la plateforme [FUN](https://www.fun-mooc.fr/ "Plateforme FUN"). Ce MOOC est proposé par [François Husson](http://math.agrocampus-ouest.fr/infoglueDeliverLive/membres/Francois.Husson "François Husson"), [Jérôme Pagès](http://math.agrocampus-ouest.fr/infoglueDeliverLive/membres/Jerome.Pages "Jérôme Pagès") et [Magalie Houée-Bigot](http://math.agrocampus-ouest.fr/infoglueDeliverLive/membres/Magalie.Hou%C3%A9e-Bigot "Magalie Houée-Bigot").   
-
 
 #### Les données
 
-EXEMPLE DU CRÉDOC sur 1724 femmes, Nicole Tabard du CREDOC, date de publication 1974.     
-Afficher le diaporama (slide 5 du PDF de François Husson)     
-Sur un questionnaire de x questions au total, on cherche à étudier l'articulation des réponses à deux questions.      
+Les données sur lesquelles nous allons travailler proviennent du MOOC [Analyse des données multidimensionnelles](https://www.fun-mooc.fr/courses/agrocampusouest/40001S03/session03/about "MOOC Analyse de données multidimensionnelles") sur la plateforme [FUN](https://www.fun-mooc.fr/ "Plateforme FUN"). Ce MOOC est proposé par [François Husson](http://math.agrocampus-ouest.fr/infoglueDeliverLive/membres/Francois.Husson "François Husson"), [Jérôme Pagès](http://math.agrocampus-ouest.fr/infoglueDeliverLive/membres/Jerome.Pages "Jérôme Pagès") et [Magalie Houée-Bigot](http://math.agrocampus-ouest.fr/infoglueDeliverLive/membres/Magalie.Hou%C3%A9e-Bigot "Magalie Houée-Bigot").
 
-* Question (variable) 1 : Quelle est la famille idéale pour vous ?    
-* Question (variable) 2 : Quelle activité convient le mieux à une mère de famille quand ses enfants vont à l’école ?     
+Les données sont issues d'un questionnaire du [CREDOC](http://www.credoc.fr/) publié en 1974 par Nicole Tabard. Le MOOC ne nous donne pas d'informations sur les circonstances dans lesquelles le questionnaire a été établi ni sur le nombre total de questions. Nous savons uniquement qu'il a porté sur 1724 femmes. L'AFC ne nous permet pas d'analyser l'intégralité du questionnaire mais il va nous servir pour étudier l'articulation des réponses qualitatives à deux questions :  Quelle est la famille idéale pour vous ? et Quelle activité convient le mieux à une mère de famille quand ses enfants vont à l’école ?
 
-Chaque question de l'exemple à trois modalités qualitatives.     
-Données de départ : un tableau de contingence. Il y a des chiffres dans le tableau mais ils ne représentent pas les réponses aux questions mais seulement le nombre d'individus ayant répondu aux deux modalités.     
-Marge ligne et marge colonne. 1724 en bas à gauche.     
-Reprendre la contradiction évoquée par François Husson.     
-Reprendre l’apparente contradiction entre les 2 questions : Il y a des réponses à une question qui semblent plus favorables que l’autre au travail féminin. Notamment sur le travail féminin, si on cumule les 1123 + 317 en faveur du travail féminin, on obtient 83,5% de réponses en faveur du travail féminin.     
+Le point de départ de l'analyse est le tableau de contingence reproduit ci-dessous. C'est ce type de données (les marges des totaux mis à part) que nous fournirons à la fonction de calcul de l'AFC.
 
+Comme le souligne François Husson dans le MOOC, il est difficile de savoir à partir de ce tableau si les femmes sont favorables ou non au travail féminin. En effet, une majorité de femmes (908 sur 1724, soit 52%) ont répondu que la famille idéale est celle où "seul le mari travaille". Elles sont néanmoins 1123 sur 1724 (65%) à avoir répondu que l'activité convenant le mieux à une mère de famille quand ses enfants vont à l’école est de travailler à mi-temps. L'AFC va nous permettre d'étudier le lien entre ces deux questions et de lever cette apparente contradiction. Elle va notamment nous permettre de visualiser la nature de la liaison entre les deux questions. Mais qu'est ce qu'une liaison ?
 
-#### À quoi va nous servir l'AFC ?
+Une liaison entre deux variables est l'écart entre les données observées et le modèle d'indépendance. Mettons pour l'instant de côté cette notion, nous reviendrons plus tard.
 
-L'AFC va nous servir à **visualiser** la nature de la liaison entre les 2 variables qualitatives.       
-Qu'est-ce qu'une liaison ?       
-C'est l'écart entre les données observées et le modèle d'indépendance (ne pas oublier de revenir sur la notion d'indépendance avec le khi2don$expected).       
-
-On n'a pas le questionnaire complet et on ne montrera pas comment obtenir le tableau de contingence à partir des réponses au questionnaire.       
-Commment ouvrir le fichier CSV avec Notepad++, OpenOffice, LibreOffice, etc ?       
-Petite explication sur le système d'encodage et les éventuels problèmes avec Excel.     
-
-
-#### Ouverture de R studio.
-
-Créer un dossier projet.       
-Y mettre le fichier CSV.       
-On peut exécuter les instructions en R dans la console mais le mieux est de créer un fichier .R pour y sauvegarder toutes instructions et pouvoir les relancer plus tard.       
-Créer un fichier .R      
+Commençons par ouvrir le logiciel RStudio et par créer un nouveau projet depuis le menu File > New Project. Choisissons ensuite "New directory" > "Empty project" puis saisissons *AFC-sous-R* dans Directory name. Téléchargeons le fichier [AnaDo_JeuDonnees_TravailFemme.csv](https://github.com/JBPressac/AFC-sous-R/blob/master/AnaDo_JeuDonnees_TravailFemme.csv) du tableau de contingence et plaçons-le dans le répertoire "AFC-sous-R". Créons ensuite notre script R depuis File > New file > R script.
 
 
 #### Définir la localisation du répertoire de travail
